--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@langchain/community": "^0.3.18",
+    "@langchain/core": "^0.3.46",
     "@langchain/ollama": "^0.1.3",
     "@supabase/supabase-js": "^2.47.6",
     "ai": "^4.0.18",
